--- a/4. Fetch API/index.html
+++ b/4. Fetch API/index.html
@@ -15,20 +15,70 @@
             // Resource: https://www.freecodecamp.org/news/how-to-fetch-data-from-an-api-using-the-fetch-api-in-javascript/
 
             // Checkpoint 4.1 What are HTTP requests and reponses? What are the various HTTP verbs and what do they do?
-            // Answer: 
+            // Answer: HTTP requests are actions made by a client, such as a web browser, to retrieve or modify data from a server, 
+            //while HTTP responses are the server's replies to those requests, containing status information and the requested data or error messages. 
+            //The various HTTP verbs, such as GET, POST, PUT, DELETE, etc., indicate the desired action to be performed on a resource, like retrieving, creating, 
+            //updating, or deleting data.
 
             // Todo 4.1 Fetch the list of users. Outout the first and second page of users.
+            const response = await fetch("https://reqres.in/api/users?page=1");
+            const data = await response.json();
+            console.log("First Page of Users:", data.data);
+            const responsePage2 = await fetch("https://reqres.in/api/users?page=2");
+            const dataPage2 = await responsePage2.json();
+            console.log("Second Page of Users:", dataPage2.data);
 
             // Todo 4.2 Fetch the information about a single user. Display their information
+            const userId = 1; 
+            const responseUser = await fetch("https://reqres.in/api/users/${userId}");
+            const userData = await responseUser.json();
+            console.log("User Information:", userData.data);
 
             // Todo 4.3 Create a user
+            const newUser = {
+            name: "Nicklaus Rosales",
+            job: "Software Engineer",
+            };
+            const responseCreateUser = await fetch("https://reqres.in/api/users", {
+            method: "POST",
+            headers: {
+            "Content-Type": "application/json",
+            },
+            body: JSON.stringify(newUser),});
+            const createdUserData = await responseCreateUser.json();
+            console.log("Created User Information:", createdUserData);
 
             // Todo 4.4 Update the information of the user that you have created
+            const userIdToUpdate = 1; 
+            const updatedUserData = {
+            name: "Updated Name",
+            job: "Updated Job",
+            };
+
+            const responseUpdateUser = await fetch("https://reqres.in/api/users/${userIdToUpdate}", {
+            method: "PUT",
+            headers: {
+            "Content-Type": "application/json",},
+            body: JSON.stringify(updatedUserData),
+            });
+
+            const updatedUserDataResponse = await responseUpdateUser.json();
+            console.log("Updated User Information:", updatedUserDataResponse);
 
             // Todo 4.5 Delete the user that you have created
+            const userIdToDelete = 1; 
+            const responseDeleteUser = await fetch("https://reqres.in/api/users/${userIdToDelete}", {
+            method: "DELETE",
+            });
 
+            if (responseDeleteUser.ok) {
+            console.log("User with ID ${userIdToDelete} has been deleted successfully.");
+            } else {
+            console.error("Failed to delete user with ID ${userIdToDelete}.");
+            }
             // Checkpoint 4.2 What is the difference between callbacks, then-catch vs await-try-catch? When should you use one over the other
-            // Answer: 
+            // Answer: Callbacks with then-catch is a traditional way to handle asynchronous operations using Promises, while async-await with try-catch 
+            //provides a more readable and sequential coding style for handling asynchronous code, making it easier to reason about and maintain.
         }
         start()
 
